analysis/low-level-api-fir/testData/lazyResolve/errors/functionDuplicatedContextParameter2.kt
// LANGUAGE: +ContextParameters
// IGNORE_FIR

context(c<caret>: Int)
context(c: String)
fun foo() {}